Finish CU64 training code

--- a/HM-16.5_AI/bin/vc10/x64/Release/KerasCNN/net_CNNv1.ipynb
+++ b/HM-16.5_AI/bin/vc10/x64/Release/KerasCNN/net_CNNv1.ipynb
@@ -31,7 +31,8 @@
     "import keras\n",
     "from keras.models import Sequential, Model\n",
     "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D, BatchNormalization, Input\n",
-    "from keras.utils import plot_model"
+    "from keras.utils import plot_model\n",
+    "import h5py\n"
    ]
   },
   {
@@ -74,7 +75,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#Downsampling and mean removal is ignored\n",
     "\n",
     "#Branch 1 \n",
@@ -173,7 +173,7 @@
     "\n",
     "y_2 = Dense(4,activation='sigmoid')(level_2_2)\n",
     "\n",
-    "y_3 = Dense(8,activation='sigmoid')(level_3_2)"
+    "y_3 = Dense(16,activation='sigmoid')(level_3_2)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model(inputs=[image16, image32, image64, qp], outputs = [y_1, y_2, y_3])"
+    "MODEL = Model(inputs=[image16, image32, image64, qp], outputs = [y_1, y_2, y_3])"
    ]
   },
   {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -292,27 +292,54 @@
       "__________________________________________________________________________________________________\n",
       "dense_8 (Dense)                 (None, 4)            392         concatenate_5[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dense_9 (Dense)                 (None, 8)            1552        concatenate_7[0][0]              \n",
+      "dense_9 (Dense)                 (None, 16)           3104        concatenate_7[0][0]              \n",
       "==================================================================================================\n",
-      "Total params: 1,286,658\n",
-      "Trainable params: 1,286,658\n",
+      "Total params: 1,288,210\n",
+      "Trainable params: 1,288,210\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "model.summary()"
+    "MODEL.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_model(model, to_file='model.png')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss=keras.losses.mean_squared_error,\n",
+    "            optimizer = 'adam',\n",
+    "             metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL.save('cnnv1.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
